--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             <div class="box-fullLogo">
                                 <div class="col-md-3">
                                     <div class="box-fullLogo__item">
-                                        <a class="box-avto" href="#">
+                                        <a class="box-avto" href="index_model.html">
                                             <img class="box-avto__image"
                                                  src="img/avtoLogo/256c4b52d90232ec143be7355132ad85.jpg" alt="avto">
                                             <p class="box-avto__mark">Audi</p>
@@ -308,10 +308,10 @@
                                         <li data-thumb="img/slider1/th/slide4.jpg" data-src="img/slider1/slide4.jpg" class="box-sliderOne__item"><img src="img/slider1/slide4.jpg" alt="slider1"></li>
                                         <li data-thumb="img/slider1/th/slide5.jpg" data-src="img/slider1/slide5.jpg" class="box-sliderOne__item"><img src="img/slider1/slide5.jpg" alt="slider1"></li>
                                         <li data-thumb="img/slider1/th/slide6.jpg" data-src="img/slider1/slide6.jpg" class="box-sliderOne__item"><img src="img/slider1/slide6.jpg" alt="slider1"></li>
-                                         <li data-thumb="img/slider1/th/slide7.jpg" data-src="img/slider1/slide6.jpg" class="box-sliderOne__item"><img src="img/slider1/slide6.jpg" alt="slider1"></li>
-                                          <li data-thumb="img/slider1/th/slide8.jpg" data-src="img/slider1/slide6.jpg" class="box-sliderOne__item"><img src="img/slider1/slide6.jpg" alt="slider1"></li>
-                                          <li data-thumb="img/slider1/th/slide9.jpg" data-src="img/slider1/slide9.jpg" class="box-sliderOne__item"><img src="img/slider1/slide6.jpg" alt="slider1"></li>
-                                          <li data-thumb="img/slider1/th/slide10.jpg" data-src="img/slider1/slide10.jpg" class="box-sliderOne__item"><img src="img/slider1/slide6.jpg" alt="slider1"></li>
+                                        <li data-thumb="img/slider1/th/slide7.jpg" data-src="img/slider1/slide7.jpg" class="box-sliderOne__item"><img src="img/slider1/slide7.jpg" alt="slider1"></li>
+                                        <li data-thumb="img/slider1/th/slide8.jpg" data-src="img/slider1/slide8.jpg" class="box-sliderOne__item"><img src="img/slider1/slide8.jpg" alt="slider1"></li>
+                                        <li data-thumb="img/slider1/th/slide9.jpg" data-src="img/slider1/slide9.jpg" class="box-sliderOne__item"><img src="img/slider1/slide9.jpg" alt="slider1"></li>
+                                        <li data-thumb="img/slider1/th/slide10.jpg" data-src="img/slider1/slide10.jpg" class="box-sliderOne__item"><img src="img/slider1/slide10.jpg" alt="slider1"></li>
                                     </ul>
                                 </div>
                             </div>
