--- a/index_model.html
+++ b/index_model.html
@@ -113,7 +113,7 @@
                     <div class="box-avtoModdel">
                         <div class="row">
                             <div class="col-md-4">
-                                <a href="#">
+                                <a href="index_offers.html">
                                     <div class="box-avtoModdel__img">
                                         <img src="img/marks/Audi/A5Coupe.png" alt="audi">
                                         <p class="box-avtoModdel__name box-avto_mark-A5Coupe">A5 Coupe</p>
