fixed price blockes

--- a/index_offers.html
+++ b/index_offers.html
@@ -146,12 +146,53 @@
                             </div>
                         </div>
 
-                        <div class="box-offers__gboInformation">
+                        <div class="box-gboInfo">
+
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="box-gboInfo_item">
+                                            <img class="box-gboInfo_img" src="img/GBO/landi.png" alt="gbo">
+                                            <p class="box-gboInfo__price">Цена: <span class="prace-gbo__uah">9550</span>/<span
+                                                    class="prace-gbo__euro">335</span></p>
+                                            <span class="box-gboInfo_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                            Debitis dolores earum enim laudantium minima nesciunt numquam officia omnis quasi totam.
+                                            Cumque dolores, facere laboriosam magnam molestiae optio quasi reprehenderit voluptatum.
+                                Debitis dolores earum enim laudantium minima nesciunt numquam officia omnis quasi totam.
+                                            Cumque dolores, facere laboriosam magnam molestiae optio quasi reprehenderit voluptatum.
+                                Debitis dolores earum enim laudantium minima nesciunt numquam officia omnis quasi totam.
+                                            Cumque dolores, facere laboriosam magnam molestiae optio quasi reprehenderit voluptatum.
+                                Debitis dolores earum enim laudantium minima nesciunt numquam officia omnis quasi totam.
+                                            Cumque dolores, facere laboriosam magnam molestiae optio quasi reprehenderit voluptatum.
+
+                            </span>
+                                        </div>
+                                        <div class="box-gboInfo_item">
+                                            <img class="box-gboInfo_img" src="img/GBO/lovanto.png" alt="gbo">
+                                            <p class="box-gboInfo__price">Цена: <span
+                                                    class="prace-gbo__uah">10500</span>/<span class="prace-gbo__euro">405</span>
+                                            </p>
+                                            <span class="box-gboInfo_text">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.Debitis dolores earum enim laudantium minima nesciunt numquam officia omnis quasi totam.Cumque dolores, facere laboriosam magnam molestiae optio quasi reprehenderit voluptatum.
+                            </span>
+                                        </div>
+                                        <div class="box-gboInfo_item">
+                                            <img class="box-gboInfo_img" src="img/GBO/stag.png" alt="gbo">
+                                            <p class="box-gboInfo__price">Цена: <span
+                                                    class="prace-gbo__uah">14100</span>/<span class="prace-gbo__euro">544</span>
+                                            </p>
+                                            <span class="box-gboInfo_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                            Debitis dolores earum enim laudantium minima nesciunt numquam officia omnis quasi totam.
+                                            Cumque dolores, facere laboriosam magnam molestiae optio quasi reprehenderit voluptatum.
+                            </span>
+                                        </div>
+
+
+                                    </div>
+                                </div>
+                            </div>
 
                         </div>
 
-
-                    </div>
 
                 </div>
             </div>
