--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="libs/licover/liCover.css">
 
 
-    <link rel="stylesheet" href="libs/lightslider/css/lightslider.min.css">    
+    <link rel="stylesheet" href="libs/lightslider/css/lightslider.min.css">
 
     <link rel="stylesheet" href="libs/lightgallery/css/lightgallery.css">
     <link rel="stylesheet" href="libs/lightgallery/css/lg-transitions.css">
@@ -31,7 +31,7 @@
     <!-- <link rel="stylesheet" href="libs/slick/slick.css">
     <link rel="stylesheet" href="libs/slick/slick-theme.css"> -->
 
-   <!--  <link rel="stylesheet" href="libs/jQuery-UI/jquery-ui.min.css"> -->
+    <!--  <link rel="stylesheet" href="libs/jQuery-UI/jquery-ui.min.css"> -->
 
 
     <link rel="stylesheet" href="styles/fonts.css">
@@ -300,20 +300,47 @@
                                 <div class="box-sliderOne">
                                     <h4 class="box-gbo__mainPhrase">Портфолио работ по ГБО</h4>
 
-
                                     <ul class="box-sliderOne__items ">
-                                        <li data-thumb="img/slider1/th/slide1.jpg" data-src="img/slider1/slide1.jpg" class="box-sliderOne__item"><img src="img/slider1/slide1.jpg" alt="slider1"></li>
-                                        <li data-thumb="img/slider1/th/slide2.jpg" data-src="img/slider1/slide2.jpg" class="box-sliderOne__item"><img src="img/slider1/slide2.jpg" alt="slider1"></li>
-                                        <li data-thumb="img/slider1/th/slide3.jpg" data-src="img/slider1/slide3.jpg" class="box-sliderOne__item"><img src="img/slider1/slide3.jpg" alt="slider1"></li>
-                                        <li data-thumb="img/slider1/th/slide4.jpg" data-src="img/slider1/slide4.jpg" class="box-sliderOne__item"><img src="img/slider1/slide4.jpg" alt="slider1"></li>
-                                        <li data-thumb="img/slider1/th/slide5.jpg" data-src="img/slider1/slide5.jpg" class="box-sliderOne__item"><img src="img/slider1/slide5.jpg" alt="slider1"></li>
-                                        <li data-thumb="img/slider1/th/slide6.jpg" data-src="img/slider1/slide6.jpg" class="box-sliderOne__item"><img src="img/slider1/slide6.jpg" alt="slider1"></li>
-                                        <li data-thumb="img/slider1/th/slide7.jpg" data-src="img/slider1/slide7.jpg" class="box-sliderOne__item"><img src="img/slider1/slide7.jpg" alt="slider1"></li>
-                                        <li data-thumb="img/slider1/th/slide8.jpg" data-src="img/slider1/slide8.jpg" class="box-sliderOne__item"><img src="img/slider1/slide8.jpg" alt="slider1"></li>
-                                        <li data-thumb="img/slider1/th/slide9.jpg" data-src="img/slider1/slide9.jpg" class="box-sliderOne__item"><img src="img/slider1/slide9.jpg" alt="slider1"></li>
-                                        <li data-thumb="img/slider1/th/slide10.jpg" data-src="img/slider1/slide10.jpg" class="box-sliderOne__item"><img src="img/slider1/slide10.jpg" alt="slider1"></li>
+                                        <li class="box-sliderOne__item" data-thumb="img/slider1/th/slide1.jpg"
+                                            data-src="img/slider1/slide1.jpg">
+                                            <img src="img/slider1/slide1.jpg" alt="slider1">
+                                        </li>
+                                        <li class="box-sliderOne__item" data-thumb="img/slider1/th/slide2.jpg"
+                                            data-src="img/slider1/slide2.jpg">
+                                            <img src="img/slider1/slide2.jpg" alt="slider1">
+                                        </li>
+                                        <li class="box-sliderOne__item" data-thumb="img/slider1/th/slide3.jpg"
+                                            data-src="img/slider1/slide3.jpg">
+                                            <img src="img/slider1/slide3.jpg" alt="slider1">
+                                        </li>
+                                        <li class="box-sliderOne__item" data-thumb="img/slider1/th/slide4.jpg"
+                                            data-src="img/slider1/slide4.jpg">
+                                            <img src="img/slider1/slide4.jpg" alt="slider1">
+                                        </li>
+                                        <li class="box-sliderOne__item" data-thumb="img/slider1/th/slide5.jpg"
+                                            data-src="img/slider1/slide5.jpg">
+                                            <img src="img/slider1/slide5.jpg" alt="slider1">
+                                        </li>
+                                        <li class="box-sliderOne__item" data-thumb="img/slider1/th/slide6.jpg"
+                                            data-src="img/slider1/slide6.jpg">
+                                            <img src="img/slider1/slide6.jpg" alt="slider1">
+                                        </li>
+                                        <li class="box-sliderOne__item" data-thumb="img/slider1/th/slide7.jpg"
+                                            data-src="img/slider1/slide7.jpg">
+                                            <img src="img/slider1/slide7.jpg" alt="slider1"></li>
+                                        <li class="box-sliderOne__item" data-thumb="img/slider1/th/slide8.jpg"
+                                            data-src="img/slider1/slide8.jpg">
+                                            <img src="img/slider1/slide8.jpg" alt="slider1"></li>
+                                        <li class="box-sliderOne__item" data-thumb="img/slider1/th/slide9.jpg"
+                                            data-src="img/slider1/slide9.jpg">
+                                            <img src="img/slider1/slide9.jpg" alt="slider1"></li>
+                                        <li class="box-sliderOne__item" data-thumb="img/slider1/th/slide10.jpg"
+                                            data-src="img/slider1/slide10.jpg">
+                                            <img src="img/slider1/slide10.jpg" alt="slider1">
+                                        </li>
                                     </ul>
                                 </div>
+
                             </div>
                         </div>
                     </div>
@@ -344,7 +371,6 @@
         </div>
     </div>
 </footer>
-
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
